name:                cardano-sl-chain
version:             1.3.0
synopsis:            Cardano SL - transaction processing
description:         Cardano SL - transaction processing
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Pos.Chain.Block
                       Pos.Chain.Delegation
                       Pos.Chain.Lrc
                       Pos.Chain.Security
                       Pos.Chain.Ssc
                       Pos.Chain.Script
                       Pos.Chain.Script.Examples
                       Pos.Chain.Txp
                       Pos.Chain.Update

  other-modules:

                       Pos.Chain.Block.Blockchain
                       Pos.Chain.Block.Genesis
                       Pos.Chain.Block.Genesis.Lens
                       Pos.Chain.Block.Genesis.Instances
                       Pos.Chain.Block.Genesis.Types
                       Pos.Chain.Block.Main
                       Pos.Chain.Block.Main.Instances
                       Pos.Chain.Block.Main.Types
                       Pos.Chain.Block.Union
                       Pos.Chain.Block.Union.ComponentBlock
                       Pos.Chain.Block.Union.Types
                       Pos.Chain.Block.Constructors
                       Pos.Chain.Block.BHelpers
                       Pos.Chain.Block.Configuration
                       Pos.Chain.Block.Error
                       Pos.Chain.Block.Logic
                       Pos.Chain.Block.Slog
                       Pos.Chain.Block.Types
                       Pos.Chain.Block.Slog.Types
                       Pos.Chain.Block.Logic.Integrity
                       Pos.Chain.Block.JsonLog

                       Pos.Chain.Delegation.Cede
                       Pos.Chain.Delegation.Cede.Class
                       Pos.Chain.Delegation.Cede.Types
                       Pos.Chain.Delegation.Class
                       Pos.Chain.Delegation.Configuration
                       Pos.Chain.Delegation.Types

                       Pos.Chain.Txp.Configuration
                       Pos.Chain.Txp.Base
                       Pos.Chain.Txp.Error
                       Pos.Chain.Txp.Topsort
                       Pos.Chain.Txp.GenesisUtxo
                       Pos.Chain.Txp.Toil
                       Pos.Chain.Txp.Toil.Failure
                       Pos.Chain.Txp.Toil.Logic
                       Pos.Chain.Txp.Toil.Monad
                       Pos.Chain.Txp.Toil.Stakes
                       Pos.Chain.Txp.Toil.Types
                       Pos.Chain.Txp.Toil.Utxo
                       Pos.Chain.Txp.Toil.Utxo.Functions
                       Pos.Chain.Txp.Toil.Utxo.Util

                       Pos.Chain.Lrc.Fts
                       Pos.Chain.Lrc.Types
                       Pos.Chain.Lrc.Error
                       Pos.Chain.Lrc.Core
                       Pos.Chain.Lrc.Genesis
                       Pos.Chain.Lrc.RichmenComponent

                       Pos.Chain.Security.Params
                       Pos.Chain.Security.Util

                       Pos.Chain.Ssc.Base
                       Pos.Chain.Ssc.Error
                       Pos.Chain.Ssc.Error.Seed
                       Pos.Chain.Ssc.Error.Verify
                       Pos.Chain.Ssc.Types
                       Pos.Chain.Ssc.Message
                       Pos.Chain.Ssc.Mem
                       Pos.Chain.Ssc.Functions
                       Pos.Chain.Ssc.VssCertData
                       Pos.Chain.Ssc.Seed
                       Pos.Chain.Ssc.Configuration
                       Pos.Chain.Ssc.Behavior
                       Pos.Chain.Ssc.Shares
                       Pos.Chain.Ssc.Toss
                       Pos.Chain.Ssc.Toss.Logic
                       Pos.Chain.Ssc.Toss.Pure
                       Pos.Chain.Ssc.Toss.Base
                       Pos.Chain.Ssc.Toss.Class
                       Pos.Chain.Ssc.Toss.Types

                       Pos.Chain.Update.BlockVersion
                       Pos.Chain.Update.Configuration
                       Pos.Chain.Update.Constants
                       Pos.Chain.Update.Poll
                       Pos.Chain.Update.Poll.Class
                       Pos.Chain.Update.Poll.Modifier
                       Pos.Chain.Update.Poll.Types
                       Pos.Chain.Update.Poll.Failure
                       Pos.Chain.Update.Params

  build-depends:       Cabal
                     , aeson
                     , aeson-options
                     , array
                     , base
                     , bytestring
                     , cardano-sl-binary
                     , cardano-sl-core
                     , cardano-sl-crypto
                     , cardano-sl-util
                     , cborg
                     , cereal
                     , conduit
                     , containers
                     , cryptonite
                     , data-default
                     , deepseq
                     , ekg-core
                     , ether
                     , exceptions
                     , fmt >= 0.4
                     , formatting
                     , free
                     , hashable
                     , lens
                     , log-warper
                     , lrucache
                     , memory
                     , mtl
                     , mmorph
                     , mono-traversable
                     , neat-interpolation
                     , parsec
                     , plutus-prototype
                     , safecopy
                     , safe-exceptions
                     , serokell-util
                     , reflection
                     , template-haskell
                     , text
                     , time
                     , time-units
                     , formatting
                     , transformers
                     , universum
                     , unordered-containers

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs

  other-modules:       Spec
                       Test.Pos.Chain.Block.Arbitrary
                       Test.Pos.Chain.Block.Bi
                       Test.Pos.Chain.Block.BlockSpec
                       Test.Pos.Chain.Block.CborSpec
                       Test.Pos.Chain.Block.Gen
                       Test.Pos.Chain.Block.SafeCopySpec
                       Test.Pos.Chain.Delegation.Arbitrary
                       Test.Pos.Chain.Lrc.FtsSpec
                       Test.Pos.Chain.Ssc.Gen
                       Test.Pos.Chain.Ssc.Json
                       Test.Pos.Chain.Ssc.Arbitrary
                       Test.Pos.Chain.Txp.CoreSpec
                       Test.Pos.Chain.Txp.Toil.UtxoSpec
                       Test.Pos.Chain.Update.Arbitrary
                       Test.Pos.Chain.Update.Arbitrary.Core

  build-depends:       base
                     , bytestring
                     , cardano-crypto
                     , cardano-sl-binary
                     , cardano-sl-binary-test
                     , cardano-sl-core
                     , cardano-sl-core-test
                     , cardano-sl-crypto
                     , cardano-sl-crypto-test
                     , cardano-sl-chain
                     , cardano-sl-util
                     , cardano-sl-util-test
                     , containers
                     , fmt
                     , formatting
                     , generic-arbitrary
                     , hedgehog
                     , hspec
                     , lens
                     , mtl
                     , QuickCheck
                     , random
                     , serokell-util
                     , formatting
                     , universum
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

benchmark block-bench
  main-is:             block-bench.hs
  hs-source-dirs:      bench test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0


  other-modules:       Test.Pos.Chain.Block.Arbitrary
                       Test.Pos.Chain.Block.Arbitrary.Generate
                       Test.Pos.Chain.Delegation.Arbitrary
                       Test.Pos.Chain.Ssc.Arbitrary
                       Test.Pos.Chain.Update.Arbitrary
                       Test.Pos.Chain.Update.Arbitrary.Core

  ghc-options: -O2
  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , criterion >= 1.3.0.0
                     , cardano-sl-binary
                     , cardano-sl-chain
                     , cardano-sl-crypto
                     , cardano-sl-core
                     , cardano-sl-core-test
                     , cardano-sl-crypto-test
                     , cardano-sl-util-test
                     , deepseq
                     , formatting
                     , generic-arbitrary
                     , random
                     , text
                     , universum
                     , unordered-containers
