name:                cardano-sl-chain
version:             1.3.0
synopsis:            Cardano SL - transaction processing
description:         Cardano SL - transaction processing
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Pos.Chain.Block
                       Pos.Chain.Delegation
                       Pos.Chain.Genesis
                       Pos.Chain.Lrc
                       Pos.Chain.Security
                       Pos.Chain.Ssc
                       Pos.Chain.Script
                       Pos.Chain.Script.Examples
                       Pos.Chain.Txp
                       Pos.Chain.Update

  other-modules:

                       Pos.Chain.Block.Block
                       Pos.Chain.Block.ComponentBlock
                       Pos.Chain.Block.Configuration
                       Pos.Chain.Block.Error
                       Pos.Chain.Block.Genesis
                       Pos.Chain.Block.HasPrevBlock
                       Pos.Chain.Block.Header
                       Pos.Chain.Block.IsHeader
                       Pos.Chain.Block.JsonLog
                       Pos.Chain.Block.Logic
                       Pos.Chain.Block.Logic.Integrity
                       Pos.Chain.Block.Main
                       Pos.Chain.Block.Slog
                       Pos.Chain.Block.Slog.Types
                       Pos.Chain.Block.Types
                       Pos.Chain.Block.Util

                       Pos.Chain.Delegation.Cede
                       Pos.Chain.Delegation.Cede.Class
                       Pos.Chain.Delegation.Cede.Types
                       Pos.Chain.Delegation.Class
                       Pos.Chain.Delegation.Configuration
                       Pos.Chain.Delegation.HeavyDlgIndex
                       Pos.Chain.Delegation.LightDlgIndices
                       Pos.Chain.Delegation.Payload
                       Pos.Chain.Delegation.Proof
                       Pos.Chain.Delegation.Types

                       -- Genesis
                       Pos.Chain.Genesis.AvvmBalances
                       Pos.Chain.Genesis.Config
                       Pos.Chain.Genesis.Data
                       Pos.Chain.Genesis.Delegation
                       Pos.Chain.Genesis.Generate
                       Pos.Chain.Genesis.Hash
                       Pos.Chain.Genesis.Initializer
                       Pos.Chain.Genesis.NonAvvmBalances
                       Pos.Chain.Genesis.ProtocolConstants
                       Pos.Chain.Genesis.Spec
                       Pos.Chain.Genesis.WStakeholders

                       Pos.Chain.Txp.Configuration
                       Pos.Chain.Txp.Base
                       Pos.Chain.Txp.Error
                       Pos.Chain.Txp.Topsort
                       Pos.Chain.Txp.GenesisUtxo
                       Pos.Chain.Txp.Toil
                       Pos.Chain.Txp.Toil.Failure
                       Pos.Chain.Txp.Toil.Logic
                       Pos.Chain.Txp.Toil.Monad
                       Pos.Chain.Txp.Toil.Stakes
                       Pos.Chain.Txp.Toil.Types
                       Pos.Chain.Txp.Toil.Utxo
                       Pos.Chain.Txp.Toil.Utxo.Functions
                       Pos.Chain.Txp.Toil.Utxo.Util
                       Pos.Chain.Txp.Tx
                       Pos.Chain.Txp.TxAux
                       Pos.Chain.Txp.TxMsg
                       Pos.Chain.Txp.TxOutAux
                       Pos.Chain.Txp.TxPayload
                       Pos.Chain.Txp.TxProof
                       Pos.Chain.Txp.TxWitness
                       Pos.Chain.Txp.Undo

                       Pos.Chain.Lrc.Fts
                       Pos.Chain.Lrc.Types
                       Pos.Chain.Lrc.Error
                       Pos.Chain.Lrc.Core
                       Pos.Chain.Lrc.Genesis
                       Pos.Chain.Lrc.RichmenComponent

                       Pos.Chain.Security.Params
                       Pos.Chain.Security.Util

                       Pos.Chain.Ssc.Base
                       Pos.Chain.Ssc.Behavior
                       Pos.Chain.Ssc.Commitment
                       Pos.Chain.Ssc.CommitmentAndOpening
                       Pos.Chain.Ssc.CommitmentsMap
                       Pos.Chain.Ssc.Configuration
                       Pos.Chain.Ssc.Error
                       Pos.Chain.Ssc.Error.Seed
                       Pos.Chain.Ssc.Error.Verify
                       Pos.Chain.Ssc.Functions
                       Pos.Chain.Ssc.Mem
                       Pos.Chain.Ssc.Message
                       Pos.Chain.Ssc.Opening
                       Pos.Chain.Ssc.OpeningsMap
                       Pos.Chain.Ssc.Payload
                       Pos.Chain.Ssc.Proof
                       Pos.Chain.Ssc.Seed
                       Pos.Chain.Ssc.Shares
                       Pos.Chain.Ssc.SharesDistribution
                       Pos.Chain.Ssc.SharesMap
                       Pos.Chain.Ssc.Toss
                       Pos.Chain.Ssc.Toss.Logic
                       Pos.Chain.Ssc.Toss.Pure
                       Pos.Chain.Ssc.Toss.Base
                       Pos.Chain.Ssc.Toss.Class
                       Pos.Chain.Ssc.Toss.Types
                       Pos.Chain.Ssc.Types
                       Pos.Chain.Ssc.VssCertData
                       Pos.Chain.Ssc.VssCertificate
                       Pos.Chain.Ssc.VssCertificatesMap

                       Pos.Chain.Update.ApplicationName
                       Pos.Chain.Update.BlockVersion
                       Pos.Chain.Update.BlockVersionData
                       Pos.Chain.Update.BlockVersionModifier
                       Pos.Chain.Update.Configuration
                       Pos.Chain.Update.Constants
                       Pos.Chain.Update.Data
                       Pos.Chain.Update.Params
                       Pos.Chain.Update.Payload
                       Pos.Chain.Update.Poll
                       Pos.Chain.Update.Poll.Class
                       Pos.Chain.Update.Poll.Modifier
                       Pos.Chain.Update.Poll.Types
                       Pos.Chain.Update.Poll.Failure
                       Pos.Chain.Update.Proof
                       Pos.Chain.Update.SoftforkRule
                       Pos.Chain.Update.SoftwareVersion
                       Pos.Chain.Update.SystemTag
                       Pos.Chain.Update.Vote

  build-depends:       Cabal
                     , aeson
                     , aeson-options
                     , array
                     , base
                     , bytestring
                     , canonical-json
                     , cardano-sl-binary
                     , cardano-sl-core
                     , cardano-sl-crypto
                     , cardano-sl-util
                     , cborg
                     , cereal
                     , conduit
                     , containers
                     , cryptonite
                     , data-default
                     , deepseq
                     , ekg-core
                     , ether
                     , exceptions
                     , extra
                     , filepath
                     , fmt >= 0.4
                     , formatting
                     , free
                     , hashable
                     , lens
                     , lrucache
                     , memory
                     , mtl
                     , mmorph
                     , mono-traversable
                     , neat-interpolation
                     , parsec
                     , plutus-prototype
                     , safecopy
                     , safe-exceptions
                     , serokell-util
                     , reflection
                     , template-haskell
                     , text
                     , time
                     , time-units
                     , formatting
                     , transformers
                     , universum
                     , unordered-containers

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

test-suite chain-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs

  other-modules:       Spec
                       Test.Pos.Chain.Block.Arbitrary
                       Test.Pos.Chain.Block.Bi
                       Test.Pos.Chain.Block.BlockSpec
                       Test.Pos.Chain.Block.CborSpec
                       Test.Pos.Chain.Block.Gen
                       Test.Pos.Chain.Block.SafeCopySpec
                       Test.Pos.Chain.Delegation.Arbitrary
                       Test.Pos.Chain.Delegation.Bi
                       Test.Pos.Chain.Delegation.Example
                       Test.Pos.Chain.Delegation.Gen
                       Test.Pos.Chain.Genesis.Dummy
                       Test.Pos.Chain.Genesis.Example
                       Test.Pos.Chain.Genesis.Gen
                       Test.Pos.Chain.Genesis.Json
                       Test.Pos.Chain.Lrc.FtsSpec
                       Test.Pos.Chain.Ssc.Arbitrary
                       Test.Pos.Chain.Ssc.Bi
                       Test.Pos.Chain.Ssc.CborSpec
                       Test.Pos.Chain.Ssc.Example
                       Test.Pos.Chain.Ssc.Gen
                       Test.Pos.Chain.Ssc.Json
                       Test.Pos.Chain.Txp.Arbitrary
                       Test.Pos.Chain.Txp.Arbitrary.Unsafe
                       Test.Pos.Chain.Txp.Bi
                       Test.Pos.Chain.Txp.CoreSpec
                       Test.Pos.Chain.Txp.Gen
                       Test.Pos.Chain.Txp.Json
                       Test.Pos.Chain.Txp.Example
                       Test.Pos.Chain.Txp.Toil.UtxoSpec
                       Test.Pos.Chain.Update.Arbitrary
                       Test.Pos.Chain.Update.Bi
                       Test.Pos.Chain.Update.CborSpec
                       Test.Pos.Chain.Update.Example
                       Test.Pos.Chain.Update.Gen
                       Test.Pos.Chain.Update.Json

  build-depends:       aeson
                     , base
                     , base16-bytestring
                     , bytestring
                     , cardano-crypto
                     , cardano-sl-binary
                     , cardano-sl-binary-test
                     , cardano-sl-core
                     , cardano-sl-core-test
                     , cardano-sl-crypto
                     , cardano-sl-crypto-test
                     , cardano-sl-chain
                     , cardano-sl-util
                     , cardano-sl-util-test
                     , containers
                     , cryptonite
                     , data-default
                     , fmt
                     , formatting
                     , generic-arbitrary
                     , hedgehog
                     , hspec
                     , lens
                     , mtl
                     , pvss
                     , QuickCheck
                     , random
                     , serokell-util
                     , formatting
                     , time-units
                     , universum
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall

benchmark block-bench
  main-is:             block-bench.hs
  hs-source-dirs:      bench test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0


  other-modules:       Test.Pos.Chain.Block.Arbitrary
                       Test.Pos.Chain.Block.Arbitrary.Generate
                       Test.Pos.Chain.Delegation.Arbitrary
                       Test.Pos.Chain.Genesis.Dummy
                       Test.Pos.Chain.Ssc.Arbitrary
                       Test.Pos.Chain.Txp.Arbitrary
                       Test.Pos.Chain.Update.Arbitrary

  ghc-options:         -Wall -O2
  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , criterion >= 1.3.0.0
                     , cardano-sl-binary
                     , cardano-sl-chain
                     , cardano-sl-crypto
                     , cardano-sl-core
                     , cardano-sl-core-test
                     , cardano-sl-crypto-test
                     , cardano-sl-util-test
                     , data-default
                     , deepseq
                     , formatting
                     , generic-arbitrary
                     , lens
                     , random
                     , text
                     , universum
                     , unordered-containers
                     , vector
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
