name:                cardano-sl-client
version:             1.1.1
synopsis:            Cardano SL client modules
description:         Cardano SL client modules
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2017 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
                       Pos.Client.Txp
                       Pos.Client.Txp.Addresses
                       Pos.Client.Txp.Balances
                       Pos.Client.Txp.History
                       Pos.Client.Txp.Network
                       Pos.Client.Txp.Util

                       Pos.Client.Update
                       Pos.Client.Update.Network

                       Pos.Client.KeyStorage

  build-depends:       base
                     , cardano-sl
                     , cardano-sl-block
                     , cardano-sl-core
                     , cardano-sl-crypto
                     , cardano-sl-db
                     , cardano-sl-infra
                     , cardano-sl-networking
                     , cardano-sl-txp
                     , cardano-sl-update
                     , cardano-sl-util
                     , containers
                     , data-default
                     , formatting
                     , lens
                     , log-warper
                     , mtl
                     , safe-exceptions
                     , serokell-util
                     , stm
                     , text-format
                     , transformers
                     , universum
                     , unordered-containers
                     , vector
                     , QuickCheck

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

test-suite cardano-client-test
  main-is:             Test.hs
  other-modules:
                       Spec

                       -- Txp
                       Test.Pos.Client.Txp.Mode
                       Test.Pos.Client.Txp.UtilSpec

  type:                exitcode-stdio-1.0

  build-depends:       
                       base
                     , bytestring
                     , cardano-sl
                     , cardano-sl-client
                     , cardano-sl-core
                     , cardano-sl-crypto
                     , cardano-sl-db
                     , cardano-sl-infra
                     , cardano-sl-ssc
                     , cardano-sl-txp
                     , cardano-sl-update
                     , cardano-sl-util
                     , containers
                     , formatting
                     , hspec
                     , QuickCheck
                     , universum >= 0.1.11
                     , unordered-containers

  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall
                       -fno-warn-orphans

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
