name:                cardano-sl-cluster
version:             1.0.0
synopsis:            Utilities to generate and run cluster of nodes
description:         See README
homepage:            https://github.com/input-output-hk/cardano-sl/cluster/README.md
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2018 IOHK
license:             MIT
license-file:        LICENSE
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:   Haskell2010
  default-extensions: DeriveGeneric
                      LambdaCase
                      NoImplicitPrelude
                      OverloadedStrings
                      TupleSections
                      TypeApplications
                      ScopedTypeVariables

  hs-source-dirs:     src

  build-depends: base >=4.7 && <5

               , cardano-sl
               , cardano-sl-chain
               , cardano-sl-core
               , cardano-sl-infra
               , cardano-sl-networking
               , cardano-sl-util
               , cardano-sl-wallet-new
               , cardano-sl-x509

               , aeson
               , async
               , attoparsec
               , bytestring
               , containers
               , cryptonite
               , directory
               , filepath
               , formatting
               , iproute
               , lens
               , optparse-applicative
               , parsec
               , safe
               , servant-client
               , temporary
               , text
               , time
               , tls
               , universum

  exposed-modules: Cardano.Cluster
                   Cardano.Cluster.Environment
                   Cardano.Cluster.Util


executable cardano-sl-demo
  ghc-options:        -threaded -O2 -rtsopts
  default-language:   Haskell2010
  default-extensions: DeriveGeneric
                      LambdaCase
                      NoImplicitPrelude
                      OverloadedStrings
                      TupleSections
                      TypeApplications
                      ScopedTypeVariables

  hs-source-dirs:     demo
  main-is:            Main.hs

  build-depends:      base

                    , cardano-sl-cluster
                    , cardano-sl-wallet-new

                    , ansi-terminal
                    , async
                    , containers
                    , docopt
                    , formatting
                    , universum
