name:                cardano-sl-core
version:             1.1.1
synopsis:            Cardano SL - core
description:         Cardano SL - core
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag asserts
  default:     True
  manual:      True

library
  hs-source-dirs:      src
  exposed-modules:
                       Pos.Arbitrary.Core
                       Pos.Arbitrary.Core.Unsafe

                       Pos.Aeson.Core
                       Pos.Aeson.Core.Configuration
                       Pos.Aeson.Fee
                       Pos.Aeson.Genesis

                       Pos.Binary.Core
                       Pos.Binary.Merkle

                       Pos.Core

                       Pos.Core.ProtocolConstants

                       Pos.Core.Block
                       Pos.Core.Block.Blockchain
                       Pos.Core.Block.Genesis
                       Pos.Core.Block.Main
                       Pos.Core.Block.Union

                       Pos.Core.Class
                       Pos.Core.Common
                       Pos.Core.Configuration
                       Pos.Core.Constants
                       Pos.Core.Context
                       Pos.Core.Delegation
                       Pos.Core.Genesis
                       Pos.Core.Script
                       Pos.Core.Slotting
                       Pos.Core.Ssc
                       Pos.Core.Txp
                       Pos.Core.Update

                       Pos.Data.Attributes
                       Pos.Exception
                       Pos.Merkle

                       Pos.System.Metrics.Constants

  other-modules:
                       -- Binary
                       Pos.Binary.Core.Address
                       Pos.Binary.Core.Block
                       Pos.Binary.Core.Blockchain
                       Pos.Binary.Core.Common
                       Pos.Binary.Core.Delegation
                       Pos.Binary.Core.Fee
                       Pos.Binary.Core.Script
                       Pos.Binary.Core.Slotting
                       Pos.Binary.Core.Ssc
                       Pos.Binary.Core.Txp
                       Pos.Binary.Core.Update

                       -- Block
                       Pos.Core.Block.Genesis.Chain
                       Pos.Core.Block.Genesis.Lens
                       Pos.Core.Block.Genesis.Instances
                       Pos.Core.Block.Genesis.Types
                       Pos.Core.Block.Main.Chain
                       Pos.Core.Block.Main.Lens
                       Pos.Core.Block.Main.Instances
                       Pos.Core.Block.Main.Types
                       Pos.Core.Block.Union.Instances
                       Pos.Core.Block.Union.Types

                       -- Common
                       Pos.Core.Common.Address
                       Pos.Core.Common.Coin
                       Pos.Core.Common.Fee
                       Pos.Core.Common.Types

                       -- Configuration
                       Pos.Core.Configuration.BlockVersionData
                       Pos.Core.Configuration.Core
                       Pos.Core.Configuration.GeneratedSecrets
                       Pos.Core.Configuration.GenesisData
                       Pos.Core.Configuration.GenesisHash
                       Pos.Core.Configuration.Protocol

                       -- Context
                       Pos.Core.Context.PrimaryKey

                       -- Genesis
                       Pos.Core.Genesis.Canonical
                       Pos.Core.Genesis.Generate
                       Pos.Core.Genesis.Helpers
                       Pos.Core.Genesis.Types

                       -- Slotting
                       Pos.Core.Slotting.Timestamp
                       Pos.Core.Slotting.Types
                       Pos.Core.Slotting.Util

                       -- SSC
                       Pos.Core.Ssc.Types
                       Pos.Core.Ssc.Util
                       Pos.Core.Ssc.Vss

                       -- Update
                       Pos.Core.Update.Types
                       Pos.Core.Update.Util

  build-depends:       aeson
                     , ansi-terminal
                     , base
                     , base58-bytestring
                     , bytestring
                     , Cabal
                     , canonical-json
                     , cardano-sl-binary
                     , cardano-sl-crypto
                     , cardano-sl-crypto-test
                     , cardano-sl-networking
                     , cardano-sl-util
                     , cardano-sl-util-test
                     , cborg
                     , containers
                     , cryptonite
                     , data-default
                     , deepseq
                     , deriving-compat
                     , exceptions
                     , extra
                     , filepath
                     , fmt
                     , formatting
                     , generic-arbitrary
                     , hashable
                     , lens
                     , log-warper >= 1.0.3
                     , memory
                     , mtl
                     , plutus-prototype
                     , quickcheck-instances
                     , random
                     , reflection
                     , safe-exceptions
                     , serokell-util
                     , template-haskell
                     , text
                     , text-format
                     , th-lift-instances
                     , time
                     , time-units
                     , universum
                     , unordered-containers
                     , vector
                     , QuickCheck

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RankNTypes
                       RecordWildCards
                       TypeApplications
                       TypeFamilies
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
  if flag(asserts)
    cpp-options: -DASSERTS_ON

test-suite test
  main-is:             test.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0

  other-modules:
                       Spec
                       Test.Pos.Core.AddressSpec
                       Test.Pos.Core.CoinSpec

  build-depends:       base
                     , bytestring
                     , cardano-sl-binary
                     , cardano-sl-core
                     , cardano-sl-crypto
                     , cardano-sl-util-test
                     , formatting
                     , hspec
                     , QuickCheck
                     , serokell-util >= 0.1.3.4
                     , text
                     , universum >= 0.1.11

  ghc-options:         -threaded
                       -rtsopts
                       -Wall

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
